force-app/main/default/objects/LogInToExperienceObjectManager__mdt/LogInToExperienceObjectManager__mdt.object-meta.xml
<CustomObject>
    <description
  >The object Manager is used to set the CRUD permissions to users while leveraging the Log in to experience as user in Salesforce.</description>
    <label>Log In To Experience Object Manager</label>
    <pluralLabel>Log In To Experience Object Managers</pluralLabel>
</CustomObject>