force-app/main/default/objects/LogInToExperienceObjectManager__mdt/fields/Create_Access_Check__c.field-meta.xml
<CustomField>
    <fullName>Create_Access_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Create access to records while leveraging the Login to Experience as User functionality. Check to enforce security.
Only users with the create access while leveraging the Login to Experience as User functionality will be able to edit.</description>
    <label>Create Access Check</label>
    <type>Checkbox</type>
</CustomField>