force-app/main/default/objects/LogInToExperienceObjectManager__mdt/fields/Delete_Access_Check__c.field-meta.xml
<CustomField>
    <fullName>Delete_Access_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Delete access to records while leveraging the Login to Experience as User functionality. Check to enforce security. 
Only users with the delete access while leveraging the Login to Experience as User functionality will be able to edit.</description>
    <label>Delete Access Check</label>
    <type>Checkbox</type>
</CustomField>