force-app/main/default/objects/LogInToExperienceObjectManager__mdt/fields/Edit_Access_Check__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Edit access to records while leveraging the Login to Experience as User functionality. Check to enforce security. 
Only users with the edit access while leveraging the Login to Experience as User functionality will be able to edit.</description>
    <label>Edit Access Check</label>
    <type>Checkbox</type>
</CustomField>