force-app/main/default/objects/LogInToExperienceObjectManager__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description
  >Selected Object to manage the access while leveraging the Log in to Experience as User in Salesforce</description>
    <label>SObject</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>